adjusted global variables to use enviornment